# auth_example_with_fastapi

./: README.md  docker-compose.yml
nginx/: default.conf
src/: Dockerfile  Pipfile  pyproject.toml  regist_user.sh
src/app/: main.py  settings.py
src/app/certs/: README.md  private_key.pem  public_key.pem
src/app/lib/: authenticate.py  authorize.py  database.py
src/app/user/: crud.py  models.py  view.py
